# fp_haskell

./: README.md
exam/: exam.cabal
exam/app/: Main.hs
exam/src/: MyLib.hs
hw_1/: hw1.cabal
hw_1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hw_1/dist-newstyle/packagedb/ghc-9.2.8/: hw1-0.1.0.0-inplace.conf  package.cache
hw_1/src/: MyLib.hs
hw_1/test/: Main.hs
hw_2/: hw2.cabal
hw_2/src/: MyLib.hs
