cabal-version:      2.4
name:               hw2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             amvalisheva
maintainer:         amvalisheva@avito.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable hw2
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        hw2

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hw2-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    -- hs-source-dirs:
    hs-source-dirs:      test
    main-is:          Main.hs
    build-depends:    
        base ^>=4.16.4.0,
        hw2,
        tasty >=1.5,
        tasty-hunit >=0.10,
        tasty-hedgehog >=1.4,
        hedgehog >=1.4

